workloads/argorollouts-canary-demo/config/overlays/base/gateway-httproute.yaml
# Source: prom-ingress/templates/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: canary-preview-http-redirect
  namespace: argo-rollouts
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-north-south-gateway
    namespace: istio-gateway
    port: 80
  hostnames:
    - canary-preview.gpu-local.cloudydemo.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
---
# Source: prom-ingress/templates/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: canary-preview-https
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-north-south-gateway
    namespace: istio-gateway
    port: 443
  hostnames:
    - canary-preview.gpu-local.cloudydemo.com
  rules:
  - backendRefs:
     - group: ""
       kind: Service
       name: canary-demo-preview
       port: 80
       weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
---
# Source: prom-ingress/templates/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: canary-http-redirect
  namespace: argo-rollouts
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-north-south-gateway
    namespace: istio-gateway
    port: 80
  hostnames:
    - canary.gpu-local.cloudydemo.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
---
# Source: prom-ingress/templates/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: canary-https
  namespace: monitoring
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-north-south-gateway
    namespace: istio-gateway
    port: 443
  hostnames:
    - canary.gpu-local.cloudydemo.com
  rules:
  - backendRefs:
     - group: ""
       kind: Service
       name: canary-demo
       port: 80
       weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
